objects/CRM_Related_Party__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Party</relationshipLabel>
        <relationshipName>Related_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Party</relationshipLabel>
        <relationshipName>Related_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Party</relationshipLabel>
        <relationshipName>Related_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Party</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Related Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Party</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>